# kuhl-haus-magpie

./: .coveragerc  .gitignore  .readthedocs.yml  AGENTS.md  CHANGELOG.rst  CLAUDE.md  CONTRIBUTING.rst  Dockerfile  Dockerfile.celery_beat  Dockerfile.celery_worker  Dockerfile.flower  Dockerfile.prod  README.md  README.rst  SECURITY.md  compose.yaml  docker-entrypoint.sh  gunicorn-config.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish-to-pypi.yml
docs/: conf.py  index.rst
src/kuhl_haus/magpie/canary/: tasks.py
src/kuhl_haus/magpie/canary/helpers/: canary_configs.py
src/kuhl_haus/magpie/canary/scripts/: canary.py
src/kuhl_haus/magpie/canary/tasks/: dns_check.py  http_health_check.py  tls.py
src/kuhl_haus/magpie/canary_tasks/: tasks.py
src/kuhl_haus/magpie/endpoints/: admin.py  models.py  serializers.py
src/kuhl_haus/magpie/endpoints/migrations/: 0002_endpointmodel_environment.py
src/kuhl_haus/magpie/endpoints/templates/endpoints/: endpoint_detail.html  endpoint_list.html
src/kuhl_haus/magpie/web/: settings.py
tests/: test_env.py
tests/canary/helpers/: test_canary_configs.py
tests/canary/models/: test_dns_resolver.py  test_endpoint_model.py
tests/canary/scripts/: test_canary.py
tests/canary/tasks/: test_dns_check.py  test_http_health_check.py  test_tls.py
tests/canary_tasks/: test_tasks.py
tests/endpoints/: test_api_views.py  test_models.py  test_serializers.py
tests/metrics/: test_metrics_gaps.py
tests/web/: test_celery.py  test_context_processors.py  test_health.py  test_settings.py
