[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "kuhl-haus-magpie"
description = "Site monitoring and synthetic transaction service"
authors = [
    { name = "Tom Pounders", email = "git@oldschool.engineer" },
]
readme = "README.rst"
requires-python = ">=3.12"
license = {file = "LICENSE.txt"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python"
]
dynamic = ["version"]
dependencies = [
    "celery",
    "Django",
    "djangorestframework",
    "django-celery-beat",
    "django-celery-results",
    "django-cors-headers",
    "requests",
    "dataclasses-json",
    "dnspython",
    "drf-yasg",
    "gunicorn",
    "importlib-metadata",
    "psycopg2-binary",
    "psutil",
    "pyOpenSSL",
    "python-dotenv",
    "uvicorn",
    "uvicorn-worker"
]

[project.urls]
Homepage = "https://github.com/kuhl-haus/kuhl-haus-magpie"
Documentation = "https://github.com/kuhl-haus/kuhl-haus-magpie/wiki"
Source = "https://github.com/kuhl-haus/kuhl-haus-magpie"
Changelog = "https://github.com/kuhl-haus/kuhl-haus-magpie/blob/mainline/CHANGELOG.rst"
Tracker = "https://github.com/kuhl-haus/kuhl-haus-magpie/issues"

[project.optional-dependencies]
testing = [
    "setuptools",
    "pdm-backend",
    "pytest",
    "pytest-cov",
]

# [project.scripts]
# magpie = "kuhl_haus.magpie.api:run"

[tool.pytest.ini_options]
addopts = ["--verbose"]
norecursedirs = ["dist", "build"]
testpaths = ["tests"]
DJANGO_SETTINGS_MODULE = "kuhl_haus.magpie.web.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.flake8]
max_line_length = 88
extend_ignore = ["E203", "W503"]
exclude = ["build", "dist", "docs/conf.py"]

[tool.pdm]
distribution = true
version = { source = "scm" }

[tool.pdm.build]
package-dir = "src"
includes = ["src/kuhl_haus"]

[tool.coverage.run]
branch = true
source = ["kuhl_haus.magpie"]
omit = [
    "*/web/wsgi.py",
    "*/web/asgi.py",
    "*/manage.py",
    "*/api.py",
    "*/migrations/*",
    "*/database/tests.py",
    "*/database/management/commands/bootstrap.py",
]

[tool.coverage.paths]
source = ["src/", "*/site-packages/"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self\\.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]

[tool.setuptools_scm]
local_scheme = "no-local-version"
